Use query params instead of payload for /results
